<resources>
    <string name="app_name">Mini Diary</string>
    <string name="title">Title</string>
    <string name="title_description">Mini Diary Title</string>
    <string name="date_description">Mini Diary Date</string>
    <string name="date_and_time">Date and Time</string>
    <string name="enter_title">Title</string>
    <string name="title_field_description">Enter your diary title</string>
    <string name="current_date">Current Time and Date</string>
    <string name="enter_content">Diary Content</string>
    <string name="no_network">No Network</string>
    <string name="no_network_msg">No network connected. Cannot provide current weather!!!</string>
    <string name="new_diary">New Diary</string>
    <string name="no_location_info_available">No location info saved for this diary</string>
    <string name="map">Map</string>
    <string name="mood_description">Click it to select your mood color</string>
    <string name="select_mood_color">Select Mood Color</string>
    <string name="date_time">The moment Date and Time</string>
    <string name="diary_content">Diary Content</string>
    <string name="ad">ad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_diary">Add Diary</string>
    <string name="weather_icon">weather icon</string>
    <string name="list_view_weather_icon">list view weather icon</string>
    <string name="widget_weather">weather icon</string>
    <string name="add_diary_weather">weather icon</string>
    <string name="google_map_not_found">Google Map not found, please install it to view the location.</string>
    <string name="widget_name">Current Diary</string>
    <string name="no_network_msg_weather">No network connected. Cannot provide current weather!!!</string>
    <string name="mood_color">Mood Color</string>
    <string name="reminde_msg">If we know your location, we  can save it in diary and get the weather information for you.</string>
    <string name="over_max_word_msg">Content length over max (130 words)</string>
    <string name="emtry_title_msg">Title cannot be empty.</string>
    <string name="open_weather_api_key">bde61e667c6dd574c0508f9e768badbe</string>
</resources>
