<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kathy.minidiary.AddDiaryFragment">

    <TextView
        android:id="@+id/add_diary_time_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:contentDescription="@string/current_date"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_diary_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:hint="@string/enter_title"
            android:singleLine="true" />


        <ImageView
            android:id="@+id/add_diary_weather"
            android:layout_width="@dimen/image_view_size"
            android:layout_height="@dimen/image_view_size"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:src="@drawable/art_unknown"
            android:contentDescription="@string/add_diary_weather"/>

    </LinearLayout>

    <EditText
        android:id="@+id/add_diary_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:gravity="start|top"
        android:hint="@string/enter_content"
        android:maxLines="10" />

    <TextView
        android:id="@+id/add_diary_mood_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mood_size"
        android:background="@color/blue"
        android:clickable="true"
        android:contentDescription="@string/mood_description"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:text="@string/select_mood_color"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAppearance="@android:style/TextAppearance.Large" />

</LinearLayout>
